<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">vk radio</string>
    <string name="play_str">PLAY</string>
    <string name="next_str">NEXT</string>
    <string name="pause_str">PAUSE</string>
    <string name="set_preferences">radio settings</string>
    <string name="radio_settings">Radio settings</string>
    <string name="add_to_fav">Add to fav</string>
    <string name="image_hint">album art</string>
    <string name="default_title">press play to start…</string>
    <string name="home_motivate">Just type your fav artist and start listen</string>
    <string name="home_welcome">Welcome to VK radio</string>
    <string name="next_song_wait">......</string>
    <string name="preference_play_button">Play!</string>
    <string name="new_radio_title">new radio</string>
    <string name="add_radio_slide">Add</string>
    <string name="back_hint">Double click Back to exit</string>
    <string name="problems_header">Ooops, something going wrong!</string>
    <string name="pref_genre">Radio genre</string>
    <string name="pref_artist">Artist</string>
    <string name="pref_title">Radio title</string>
    <string name="pref_link">Link type</string>
    <string name="pref_mood">Mood</string>
    <string name="pref_category_artist">Artist</string>
    <string name="pref_category_genre">Genre</string>
    <string name="pref_category_common">Common</string>
    <string name="pref_yf">Year from</string>
    <string name="pref_years">Years</string>
    <string name="pref_yt">Year to</string>
    <string name="delete_pref_btn">Delete</string>
    <string name="hint_vk">vk.com</string>
    <string name="fav_title">Favorites</string>
</resources>
